JSHManager ChangeLog

Version 0.2.0
-------------
- Rock Band 1 and 2 are now supported.
- Corrected issue when updating Guitar Hero song data that failed to
  update an existing song if new information had been discovered, such
  as a note count.
- When using the score editor panel to create and save a new score,
  the entire tree of scores is no longer reloaded.

Version 0.1.0
-------------
- Additional logging information is stored in data/logs.
- Corrected calculated rating rounding to be consistent with ScoreHero.
- Quick access to the Readme, ChangeLog, License, and logs has been added
  to the Help menu.
- Picture and video links are now saved when scores are downloaded.
- New scores can now be uploaded individually by first selecting the score
  and clicking "Upload Selected Score" in the "My Scores" menu or by
  pressing CTRL+U.
- The way passwords are stored has been changed to fix potential issues on
  some systems. If you previously saved your password, you will be required
  to re-save your password the next time you need to log in to ScoreHero.
- A new editor has been added that allows an image/video URL to be specified.
  This can be shown/hidden by clicking "Toggle Editor" in the "My Scores" menu
  or by pressing CTRL+E. When the editor is displayed, you can add a new score
  by clicking the "New" button on the editor panel. You can specify the song
  via the auto-completing text field without having to navigate to the song
  in the tree view of the scores.
- Scores with image/video URLs are now distinguished by blue, underlined
  text and/or a camera icon. Clicking on the score will launch an external browser
  to the video URL, if present, or the image URL (clicking on a new score will
  NOT launch a browser so that you can still quickly edit the score).
- Fixed an error that sometimes caused a NonUniqueResultException to occur while
  trying to download scores from ScoreHero.